# prom_test

./: .gitignore  Dockerfile.metrics  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
grafana/dashboards/: temperature_dashboard.json
grafana/provisioning/dashboards/: default.yml  temperature_dashboard.json
grafana/provisioning/datasources/: datasource.yml
prom/: main.py
