[tool.poetry]
name = "prom"
version = "0.1.0"
description = "A simple Prometheus metrics exporter"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "prom"}]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-metrics = "prom.main:main"
